--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,11 @@ body {
 }
 
 .white-letters {
+    position: absolute;
     color: white;
+    font-size: 110px;
+    top: 500%;
+    left: 64%;
 }
 
 .signature {
@@ -122,6 +126,7 @@ body {
     padding-top: 65px;
 }
 
+
 .text {
     width: 236px;
 }
@@ -131,7 +136,7 @@ body {
 }
 
 .childhood-content-father {
-    width: 966px;
+    width: 1500px;
     /* background-color: rgb(228, 105, 105); */
     display: flex;
     padding-bottom: 65px;
