--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body {
 .childhood-title {
     font-size: 70px;
     font-family: "Prata", serif;
-    letter-spacing: 10%;
+    letter-spacing: 50px;
     padding-left: 80px;
     margin-bottom: 55px;
 }
@@ -261,7 +261,7 @@ body {
     font-size: 70px;
     font-family: "Prata", serif;
     margin-bottom: 80px;
-    letter-spacing: 40%;
+    letter-spacing: 50px;
     padding-left: 80px;
 }
 
@@ -326,7 +326,7 @@ body {
     font-family: "Prata", serif;
     width: 722px;
     padding-bottom: 80px;
-    letter-spacing: 10%;
+    letter-spacing: 50px;
 }
 
 .personal-life__img {
@@ -376,7 +376,7 @@ body {
     font-family: "Prata", serif;
     width: 677px;
     padding-bottom: 80px;
-    letter-spacing: 10%;
+    letter-spacing: 50px;
     padding-left: 80px;
 }
 
