--- a/css/style.css
+++ b/css/style.css
@@ -303,18 +303,14 @@ body {
 }
 
 /* Personal life */
-
 .personal-life__content {
-    display: flex;
+    display: block; /* Убираем flex, чтобы элементы шли вертикально */
 }
 
 .personal-life__block {
     width: 1080px;
-    /* background-color: rgb(228, 105, 105); */
-    display: flex;
     padding-bottom: 65px;
     padding-top: 110px;
-    /* padding-right: 80px; */
     border-left: 1px rgba(0, 0, 0, 0.3) solid;
 }
 
@@ -322,7 +318,6 @@ body {
     width: 840px;
     margin-right: 30px;
     padding-left: 80px;
-    
 }
 
 .personal-life-title {
@@ -330,18 +325,26 @@ body {
     font-family: "Prata", serif;
     width: 722px;
     padding-bottom: 80px;
-    letter-spacing: 10%;
+    letter-spacing: 0.1em; /* Исправлено для правильного отображения */
     word-spacing: normal;
     line-height: 1.2;
 }
 
 .personal-life__img {
-    margin-top: 110px;
+    display: block; /* Убираем flex, чтобы элементы не шли в строку */
+    margin-top: 30px; /* Отступ сверху для изображения */
+    padding-left: 80px;
+}
+
+.personal-img {
+    width: 100%; /* Изображение адаптируется под ширину родительского блока */
+    height: auto; /* Сохраняем пропорции */
 }
 
 .personal-text {
     margin-bottom: 15px;
 }
+
 
 /* END LIFE */
 .end-life {
