--- a/css/style.css
+++ b/css/style.css
@@ -304,18 +304,21 @@ body {
 
 /* Personal life */
 .personal-life__content {
-    display: block; /* Убираем flex, чтобы элементы шли вертикально */
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .personal-life__block {
-    width: 1080px;
+    width: 100%;
+    display: flex;
     padding-bottom: 65px;
     padding-top: 110px;
     border-left: 1px rgba(0, 0, 0, 0.3) solid;
 }
 
 .personal-life__text {
-    width: 840px;
+    width: 70%; 
     margin-right: 30px;
     padding-left: 80px;
 }
@@ -323,22 +326,21 @@ body {
 .personal-life-title {
     font-size: 70px;
     font-family: "Prata", serif;
-    width: 722px;
+    width: 100%; 
     padding-bottom: 80px;
-    letter-spacing: 0.1em; /* Исправлено для правильного отображения */
-    word-spacing: normal;
+    letter-spacing: 0.1em;
     line-height: 1.2;
 }
 
 .personal-life__img {
-    display: block; /* Убираем flex, чтобы элементы не шли в строку */
-    margin-top: 30px; /* Отступ сверху для изображения */
-    padding-left: 80px;
+    width: 30%;
+    margin-top: 0;
+    padding-left: 0;
 }
 
 .personal-img {
-    width: 100%; /* Изображение адаптируется под ширину родительского блока */
-    height: auto; /* Сохраняем пропорции */
+    width: 100%;
+    height: auto;
 }
 
 .personal-text {
