--- a/css/style.css
+++ b/css/style.css
@@ -128,14 +128,16 @@ body {
 }
 
 .childhood-content-father {
-    width: 1080px;
+    width: 100%; /* Устанавливаем ширину блока в 100% */
     display: flex;
     padding-bottom: 65px;
     border-left: 1px rgba(0, 0, 0, 0.3) solid;
+    align-items: flex-start; /* Добавляем, чтобы изображение и текст были выровнены по верхнему краю */
 }
 
 .childhood-block-text {
-    padding-right: 35px;
+    width: 65%; /* Ширина текстового блока */
+    padding-right: 30px; /* Отступ справа для текста */
 }
 
 .childhood-title {
@@ -148,12 +150,11 @@ body {
 }
 
 .childhood-text {
-    width: 860px;
     padding-left: 80px;
     padding-bottom: 15px;
-    font-size: 18px; /* Совпадает с основным текстом */
+    font-size: 18px; /* Размер текста */
     line-height: 1.5;
-    text-align: justify;
+    text-align: justify; /* Выровнять текст по ширине */
 }
 
 .childhood-content__block {
@@ -179,7 +180,7 @@ body {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-    font-size: 18px; /* Соответствует основному тексту */
+    font-size: 18px;
     line-height: 1.5;
 }
 
@@ -199,14 +200,16 @@ body {
     padding-top: 20px;
 }
 
+/* Изображение сбоку от текста */
 .chidhood-block-img {
-    padding-left: 30px;
+    width: 35%; /* Ширина блока изображения */
+    padding-left: 30px; /* Отступ слева для изображения */
 }
 
 .father-img {
-    margin-top: 30px;
-    width: 458px;
-    height: auto;
+    width: 100%; /* Изображение растягивается на весь блок */
+    height: auto; /* Высота изображения авто для сохранения пропорций */
+    object-fit: contain;
 }
 
 
@@ -306,53 +309,45 @@ body {
 }
 
 /* Personal life */
+
 .personal-life__content {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
 }
 
 .personal-life__block {
+    width: 1080px;
     display: flex;
-    flex-direction: row;
-    width: 100%;
     padding-bottom: 65px;
     padding-top: 110px;
     border-left: 1px rgba(0, 0, 0, 0.3) solid;
 }
 
-.personal-life__img {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-right: 30px;
-}
-
-.personal-img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-}
-
 .personal-life__text {
-    width: 70%;
-    padding-left: 0;
+    width: 70%; /* Ширина текстового блока */
+    margin-right: 30px; /* Отступ справа для текста */
 }
 
 .personal-life-title {
     font-size: 70px;
     font-family: "Prata", serif;
     padding-bottom: 80px;
-    letter-spacing: 0.1em;
-    word-spacing: normal;
+    letter-spacing: 10%;
     line-height: 1.2;
+}
+
+.personal-life__img-container {
+    display: flex;
+    flex-direction: column; /* Располагаем изображения в столбик */
+    align-items: flex-start; /* Выравниваем изображения по левому краю */
+}
+
+.personal-life__img {
+    margin-bottom: 20px; /* Отступ между изображениями */
 }
 
 .personal-text {
     margin-bottom: 15px;
 }
-
 
 /* END LIFE */
 .end-life {
