--- a/css/style.css
+++ b/css/style.css
@@ -336,29 +336,22 @@ body {
 }
 
 .personal-life__img-container {
-    display: flex;
-    flex-direction: column; /* Располагаем изображения в столбик */
-    align-items: flex-start; /* Выравниваем изображения по левому краю */
+    display: block; /* Убираем flex, чтобы элементы были блочными */
+    margin-left: auto; /* Центрируем блок */
+    margin-right: auto; /* Центрируем блок */
+    width: 100%; /* Задаем ширину контейнера */
 }
 
 .personal-life__img {
+    display: block; /* Заставляем изображения вести себя как блочные элементы */
     margin-bottom: 20px; /* Отступ между изображениями */
+    max-width: 100%; /* Ограничиваем ширину изображений */
+    height: auto; /* Поддерживаем пропорции */
 }
 
 .personal-text {
     margin-bottom: 15px;
 }
-
-.image-container {
-    display: flex;
-    flex-direction: column; /* Устанавливаем вертикальное направление */
-    align-items: flex-start; /* Выравниваем по левому краю */
-}
-
-.personal-img {
-    margin-bottom: 20px; /* Отступ между изображениями */
-}
-
 
 
 /* END LIFE */
