--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ body {
 /* Изображение сбоку от текста */
 .chidhood-block-img {
     width: 458px;
+    margin-left: 20px;
 }
 
 .father-img {
@@ -407,50 +408,40 @@ body {
     font-size: 16px;
 }
 
+.conclusion {
+    padding: 60px 0;
+}
 
-/* DEATH */
-.end-life__death {
+.conclusion-title {
+    font-size: 70px;
+    font-family: "Prata", serif;
+    letter-spacing: 0.1em;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.conclusion__content {
     display: flex;
+    justify-content: center;
 }
 
-.death__content {
-    display: flex;
-    width: 1080px;
-    border-left: 1px rgba(0, 0, 0, 0.3) solid;
-    padding-top: 65px;
+.conclusion-text {
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: justify;
+    margin-bottom: 20px;
+    max-width: 800px;
 }
 
-.death__text {
-    padding-left: 80px;
+.conclusion-text__list {
+    margin: 15px 0;
+    padding-left: 20px;
 }
 
-.death-text--1 {
-    width: 840px;
+.conclusion-text__list li {
+    margin-bottom: 10px;
 }
 
-.death-text--1 > .death-text {
-    margin-bottom: 15px;
-}
-
-.death-img {
-    margin-bottom: 5px;
-}
-
-.death-end {
-    display: flex;
-}
-
-.death-end__content {
-    /* display: flex; */
-    width: 1080px;
-    border-left: 1px rgba(0, 0, 0, 0.3) solid;
-    padding-top: 55px;
-}
-
-.death-end-text {
-    padding-left: 80px;
-    width: 889px;
-}
 
 /* FOOTER */
 
